<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentInfoActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/textViewDescriptionProduct"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:textSize="20dp"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:text="@string/info" />

        <TextView
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:text="@string/etud1_nom" />

        <TextView
            android:id="@+id/textView3"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:text="@string/etud1_email" />

        <TextView
            android:id="@+id/textView4"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:text="@string/etud1_group" />

        <TextView
            android:id="@+id/textView5"
            android:textAlignment="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:autoLink="web"
            android:text="@string/site_epsi" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>